src_old/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AssetsRequired__c</fullName>
        <label>Assets Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>Sink</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillType__c</fullName>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Lumpsum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OH_Minutes__c</fullName>
        <description>Unmanaged</description>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pairing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pairing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreBillPercent__c</fullName>
        <label>PreBill %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>